fix: navbar updates

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,6 @@
 					HELP
 				</a>
 				<a href="#">
-					DOWNLOAD
-				</a>
-				<a href="#">
 					GET IN TOUCH
 				</a>
 			</div>
@@ -64,8 +61,8 @@
 	<img src="./img/back2top.svg" onclick="topFunction()" id="b2t" />
 
 	<section id="slider">
-		<a href="#" class="control_next">></a>
-		<a href="#" class="control_prev">
+		<a class="control_next">></a>
+		<a class="control_prev">
 			<</a> <ul>
 				<!-- SLIDE 1 -->
 				<li style="
