--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,9 @@
 	<img src="./img/back2top.svg" onclick="topFunction()" id="b2t" />
 
 	<section id="slider">
-		<a href="#" class="control_next">></a>
-		<a href="#" class="control_prev">
-			<</a> <ul>
+		<a class="control_next">></a>
+		<a class="control_prev"><</a> 
+		<ul>
 				<!-- SLIDE 1 -->
 				<li style="
 						background-image: url(./img/background1.png);
@@ -127,7 +127,7 @@
 						<button class="baseButton">READ MORE</button>
 					</div>
 				</li>
-				</ul>
+			</ul>
 	</section>
 
 	<section id="whoWeAre">
