feat(slider): updated slider from jquery to glidejs

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet" />
 
+
 	<!-- scripts -->
 	<script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -61,72 +62,58 @@
 
 	<img src="./img/back2top.svg" onclick="topFunction()" class="back-to-top" />
 
-	<section class="slider">
-		<a class="slider__control--next">></a>
-		<a class="slider__control--prev"><</a> 
-		<ul>
-				<!-- SLIDE 1 -->
-				<li style="
-						background-image: url(./img/background1.png);
-						background-size: cover;
-					">
-					<div class="slider__container">
-						<div class="slider__container__title">MIGRATING TO SQL?</div>
-						<div class="slider__container__text">
-							If you are going to migrate or rewrite your application to use SQL
-							database you definitely need to read about our Mediator ISAM
-							Server.
-						</div>
-						<button class="slider__container__button">READ MORE</button>
-					</div>
-				</li>
+	<div class="hero-slider">
+		<div data-glide-el="track" class="glide__track">
+		  <div class="glide__slides">
 
-				<!-- SLIDE 2 -->
-				<li style="
-						background-image: url(./img/background2.png);
-						background-size: cover;
-					">
-					<div class="slider__container">
-						<div class="slider__container__title">HOW TO BECOME A PARTNER?</div>
-						<div class="slider__container__text">
-							Every company producing Delphi or xBase software may become an OTC partner.
-							For our partners we offer attractive purchase terms and technical support.
-						</div>
-						<button class="slider__container__button">READ MORE</button>
+			<div class="hero-slider__slide" style="background-image: url('/img/background1.png');">
+				<div class="slider__container">
+					<div class="slider__container__title">MIGRATING TO SQL?</div>
+					<div class="slider__container__text">
+						If you are going to migrate or rewrite your application to use SQL 
+						database you definitely need to read about our Mediator ISAM Server.
 					</div>
-				</li>
+					<button class="slider__container__button">READ MORE</button>
+				</div>
+			</div>
 
-				<!-- SLIDE 3 -->
-				<li style="
-						background-image: url(./img/background3.png);
-						background-size: cover;
-					">
-					<div class="slider__container">
-						<div class="slider__container__title">THE PRICE CALCULATOR</div>
-						<div class="slider__container__text">
-							Now you can find out prices of all our software on-line. We have placed the price calculator
-							in "Products/Prices" section. The calculator is available for registered users only.
-						</div>
-						<button class="slider__container__button">READ MORE</button>
+			<div class="hero-slider__slide" style="background-image: url('/img/background2.png');">
+				<div class="slider__container">
+					<div class="slider__container__title">HOW TO BECOME A PARTNER?</div>
+					<div class="slider__container__text">
+						Every company producing Delphi or xBase software may become an OTC partner.
+						For our partners we offer attractive purchase terms and technical support.
 					</div>
-				</li>
+					<button class="slider__container__button">READ MORE</button>
+				</div>
+			</div>
 
-				<!-- SLIDE 4 -->
-				<li style="
-						background-image: url(./img/background4.png);
-						background-size: cover;
-					">
-					<div class="slider__container">
-						<div class="slider__container__title">WHAT DO WE OFFER?</div>
-						<div class="slider__container__text">
-							A transition to new and safe data-access technologies for everybody who creates and uses
+			<div class="hero-slider__slide" style="background-image: url('/img/background3.png');">
+				<div class="slider__container">
+					<div class="slider__container__title">THE PRICE CALCULATOR</div>
+					<div class="slider__container__text">
+						Now you can find out prices of all our software on-line. We have placed the price calculator
+						in "Products/Prices" section. The calculator is available for registered users only.
+					</div>
+					<button class="slider__container__button">READ MORE</button>
+				</div>
+			</div>
+
+			<div class="hero-slider__slide" style="background-image: url('/img/background4.png');">
+				<div class="slider__container">
+					<div class="slider__container__title">WHAT DO WE OFFER?</div>
+					<div class="slider__container__text">
+						A transition to new and safe data-access technologies for everybody who creates and uses
 							Borland Delphi or xBase applications.
-						</div>
-						<button class="slider__container__button">READ MORE</button>
 					</div>
-				</li>
-			</ul>
-	</section>
+					<button class="slider__container__button">READ MORE</button>
+				</div>
+			</div>
+
+		  </div>
+		  <div class="slider__bullets glide__bullets" data-glide-el="controls[nav]"></div>
+		</div>
+	  </div>
 
 	<section class="about-us">
 		<div class="section-title">
@@ -365,8 +352,9 @@
 	</footer>
 
 	<script src="./js/products.js"></script>
-	<script src="./js/slider.js"></script>
+	<script type="module" src="./js/scripts.js"></script>
 	<script src="./js/contact.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 </body>
 
 </html>
