--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,10 @@
 			</div>
 
 		  </div>
+		  <div class="glide__arrows" data-glide-el="controls">
+			  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><img src="./img/left-arrow-line-symbol.svg"></button>
+			  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><img src="./img/right-arrow-angle.svg"></button>
+		  </div>
 		  <div class="slider__bullets glide__bullets" data-glide-el="controls[nav]"></div>
 		</div>
 	  </div>
