feat(navbar): added dropdown menus to navbar

--- a/src/index.html
+++ b/src/index.html
@@ -40,21 +40,51 @@
 
 		<nav class="header__rect2">
 			<div class="header__links">
-				<a href="#">
-					ABOUT US
-				</a>
-				<a href="#">
-					PRODUCTS
-				</a>
-				<a href="#">
+				<div class="header__links__link header__links__dropdown" href="#">
+					<div class="header__links__dropdown__dropbtn">
+						ABOUT US
+					</div>
+
+					<div class="header__links__dropdown__dropdown-content">
+						<a href="#">News</a>
+						<a href="#">References</a>
+						<a href="#">Links</a>
+					</div>
+				</div>
+
+				<div class="header__links__link header__links__dropdown" href="#">
+					<div class="header__links__dropdown__dropbtn">
+						PRODUCTS
+					</div>
+
+					<div class="header__links__dropdown__dropdown-content">
+						<a href="#">Winflector</a>
+						<a href="#">Mediator</a>
+						<a href="#">Terminal</a>
+						<a href="#">How to buy?</a>
+						<a href="#">Prices</a>
+					</div>
+				</div>
+
+				<div class="header__links__link" href="#">
 					PARTNERS
-				</a>
-				<a href="#">
-					HELP
-				</a>
-				<a href="#">
+				</div>
+
+				<div class="header__links__link header__links__dropdown" href="#">
+					<div class="header__links__dropdown__dropbtn">
+						HELP
+					</div>
+
+					<div class="header__links__dropdown__dropdown-content">
+						<a href="#">FAQ</a>
+						<a href="#">Report problems</a>
+						<a href="#">Product verisons</a>
+					</div>
+				</div>
+
+				<div class="header__links__link header__links__contact" href="#">
 					GET IN TOUCH
-				</a>
+				</div>
 			</div>
 		</nav>
 
